<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBookDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="-70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBookImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/image_cover"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_light_green" />

            <TextView
                android:id="@+id/tvBookImageError"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:textColor="@color/system_red"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/ivBookImage"
                tools:layout_editor_absoluteX="71dp" />

            <LinearLayout
                android:id="@+id/llBookName"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_with_corner_radius"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ivBookImage"
                tools:layout_editor_absoluteX="0dp">


                <TextView
                    android:id="@+id/tvBookName"
                    android:layout_width="55dp"
                    android:layout_height="21dp"
                    android:text="@string/name_colon"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/etBookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/book_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:singleLine="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvBookNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/error_message"
                android:textColor="@color/system_red"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/llBookName"
                tools:layout_editor_absoluteX="71dp" />

            <LinearLayout
                android:id="@+id/llAuthorName"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_with_corner_radius"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/llBookName"
                tools:layout_editor_absoluteX="0dp">


                <TextView
                    android:id="@+id/tvAuthorName"
                    android:layout_width="55dp"
                    android:layout_height="21dp"
                    android:text="@string/author_colon"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/etAuthorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/author_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:singleLine="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvAuthorNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/error_message"
                android:textColor="@color/system_red"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/llAuthorName"
                tools:layout_editor_absoluteX="71dp" />

            <LinearLayout
                android:id="@+id/llBookDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_with_corner_radius"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/llAuthorName"
                tools:layout_editor_absoluteX="0dp">

                <EditText
                    android:id="@+id/etBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/about_this_book"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvBookDescError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/error_message"
                android:textColor="@color/system_red"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/llBookDesc"
                tools:layout_editor_absoluteX="71dp" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bookDetailLoadingScreen"
        android:theme="@style/ThemeOverlay.SSBookStore.FullscreenContainer"
        android:background="#4C000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FullscreenLoadingFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/bookDetailAnimationView"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/boxloding" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>